made client code angular 18-compatible

--- a/Src/WebUI/appsettings.json
+++ b/Src/WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "NorthwindDatabase": "Server=(localdb)\\mssqllocaldb;Database=NorthwindTraders;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=NorthwindTraders;"
+    "NorthwindDatabase": "Server=northwind-sqlserver.cce5api2kkvn.us-west-2.rds.amazonaws.com,1433;Integrated Security=false;User ID=adminuser;Password=DR9ZXfl2At2ehVjZuxhH75EhFxvo2UAp;Initial Catalog=NorthwindTraders;"
   },
   "Logging": {
     "LogLevel": {
