--- a/Src/WebUI/appsettings.Development.json
+++ b/Src/WebUI/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "AWS": {
+    "Profile": "csun2",
+    "Region": "us-west-2"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
